--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,4 +14,10 @@
       <ion-checkbox slot="end" [checked]="task.completed"></ion-checkbox>
     </ion-item>
   </ion-list>
+  
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="goToCreateTask()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
