--- a/src/app/create-task/create-task.page.html
+++ b/src/app/create-task/create-task.page.html
@@ -1,33 +1,40 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Crear Tarea</ion-title>
+    <ion-title>{{ task.id ? 'Editar' : 'Crear' }} Tarea</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-item>
-    <ion-label position="floating">Título</ion-label>
-    <ion-input [(ngModel)]="task.title" required></ion-input>
-  </ion-item>
+  <form (ngSubmit)="saveTask()">
+    <ion-item>
+      <ion-label position="floating">Título</ion-label>
+      <ion-input [(ngModel)]="task.title" name="title" required></ion-input>
+    </ion-item>
 
-  <ion-item>
-    <ion-label position="floating">Descripción</ion-label>
-    <ion-input [(ngModel)]="task.description"></ion-input>
-  </ion-item>
+    <ion-item>
+      <ion-label position="floating">Descripción</ion-label>
+      <ion-input [(ngModel)]="task.description" name="description"></ion-input>
+    </ion-item>
 
-  <ion-item>
-    <ion-label position="floating">Fecha de Vencimiento</ion-label>
-    <ion-datetime [(ngModel)]="task.dueDate" displayFormat="MMM DD, YYYY"></ion-datetime>
-  </ion-item>
+    <ion-item>
+      <ion-label position="floating">Fecha de vencimiento</ion-label>
+      <ion-datetime [(ngModel)]="task.dueDate" name="dueDate" required></ion-datetime>
+    </ion-item>
 
-  <ion-item>
-    <ion-label>Prioridad</ion-label>
-    <ion-select [(ngModel)]="task.priority">
-      <ion-select-option value="low">Baja</ion-select-option>
-      <ion-select-option value="medium">Media</ion-select-option>
-      <ion-select-option value="high">Alta</ion-select-option>
-    </ion-select>
-  </ion-item>
+    <ion-item>
+      <ion-label>Prioridad</ion-label>
+      <ion-select [(ngModel)]="task.priority" name="priority">
+        <ion-select-option value="low">Baja</ion-select-option>
+        <ion-select-option value="medium">Media</ion-select-option>
+        <ion-select-option value="high">Alta</ion-select-option>
+      </ion-select>
+    </ion-item>
 
-  <ion-button expand="full" (click)="saveTask()">Guardar Tarea</ion-button>
+    <ion-item>
+      <ion-label>Completada</ion-label>
+      <ion-checkbox [(ngModel)]="task.completed" name="completed"></ion-checkbox>
+    </ion-item>
+
+    <ion-button expand="full" type="submit">{{ task.id ? 'Actualizar' : 'Crear' }} Tarea</ion-button>
+  </form>
 </ion-content>
