--- a/src/app/task-details/task-details.page.html
+++ b/src/app/task-details/task-details.page.html
@@ -1,5 +1,10 @@
 <ion-header>
-  <ion-toolbar>
+
+    <ion-toolbar color="custom">
+      <ion-buttons slot="end">
+  
+        <ion-img [src]="'assets/logo/logo.png'" alt="Logo" class="logo"></ion-img>
+      </ion-buttons>
     <ion-title>Detalles de la Tarea</ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
@@ -10,6 +15,7 @@
 <ion-content>
   <ion-card *ngIf="task">
     <ion-card-header>
+      
       <ion-card-title>{{ task.title }}</ion-card-title>
       <ion-card-subtitle>
         Prioridad: {{ task.priority | titlecase }}
@@ -30,7 +36,7 @@
   </ion-card>
 
   <div class="actions">
-    <ion-button expand="block" color="primary" (click)="editTask()">
+    <ion-button expand="block" color="success" (click)="editTask()">
       Editar Tarea
     </ion-button>
     <ion-button expand="block" color="danger" (click)="deleteTask()">
