--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,6 @@
-// For information on how to create your own theme, please see:
-// http://ionicframework.com/docs/theming/
+ion-header {
+    ion-toolbar {
+      background-color: #CDFFB9;
+    }
+  }
+  
